--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -91,6 +90,16 @@
               "src/styles.css"
             ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "healthtest:build:production",
+            "firebaseProject": "healthtest-94078",
+            "firebaseHostingSite": "healthtest-94078"
           }
         }
       }
