--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "firebase": "^9.17.1",
     "jquery": "^3.6.3",
     "rxjs": "~7.5.0",
-    "sweetalert2": "^7.26.9",
+    "sweetalert2": "^11.7.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
