--- a/angular.json
+++ b/angular.json
@@ -40,12 +40,12 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "900kb"
+                  "maximumError": "4MB"
                 },
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "23kb"
+                  "maximumError": "4MB"
                 }
               ],
               "outputHashing": "all"
